# modbustcp

./: CMakeLists.txt  README.md  cross_aarch64.cmake  gitLinux.sh  gitwin.bat  main.cpp  modbus.conf  modbus_log.conf
cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  modbusTcpSrv
config/: air_-1_-1_0.json  air_-1_-1_1.json  air_-1_-1_2.json  air_-1_-1_3.json  array_-1_-1_0.json  array_-1_-1_1.json  array_-1_-1_2.json  array_-1_-1_3.json  cell_0_-1_0.json  cell_1_-1_0.json  cell_2_-1_0.json  cell_3_-1_0.json  cluster_0_-1_0.json  cluster_1_-1_0.json  cluster_2_-1_0.json  cluster_3_-1_0.json  emu_-1_-1_0.json  fire_-1_-1_0.json  fire_-1_-1_1.json  fire_-1_-1_2.json  fire_-1_-1_3.json  iosoft_-1_-1_0.json  iosoft_-1_-1_1.json  iosoft_-1_-1_2.json  iosoft_-1_-1_3.json  meter_-1_-1_0.json  meter_-1_-1_1.json  pcs_-1_-1_0.json  pcs_-1_-1_1.json  pcs_-1_-1_2.json  pcs_-1_-1_3.json
dep/DEBIAN/: changelog  control  postinst  postrm  preinst  prerm
include/: cconfig.h  gitver.h  jsonparser.h  messageQueue.h  misc.h  modbusServer.h  reg_all.h  reg_info.h  reg_info_base.h  reg_info_cell.h  reg_num.h  slaveManager.h  slavedev.h  soe.h  util.h
out-aarch64/: esccu-modbus-esmu_1.0.1_arm64.deb
out-aarch64/DEBIAN/: changelog  control  prerm
out-aarch64/app/aarch64/lems/service/modbusTcp/: modbus.conf  modbusTcpSrv
out-aarch64/app/aarch64/lems/service/modbusTcp/config/: air_-1_-1_0.json  air_-1_-1_1.json  air_-1_-1_2.json  air_-1_-1_3.json  array_-1_-1_0.json  cluster_0_-1_0.json  cluster_1_-1_0.json  cluster_2_-1_0.json  cluster_3_-1_0.json  emu_-1_-1_0.json  fire_-1_-1_0.json  fire_-1_-1_1.json  fire_-1_-1_2.json  fire_-1_-1_3.json  meter_-1_-1_0.json  meter_-1_-1_1.json  pcs_-1_-1_0.json  pcs_-1_-1_1.json  pcs_-1_-1_2.json  pcs_-1_-1_3.json
src/: cconfig.cpp  jsonparser.cpp  misc.cpp  modbusServer.cpp  reg_all.cpp  reg_info.cpp  reg_info_cell.cpp  reg_num.cpp  slaveManager.cpp  slavedev.cpp  soe.cpp  util.cpp
tools/: data_pai_py.py
